--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.jakewharton.timber:timber:4.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.google.android.gms:play-services:7.8.+'
+    compile 'me.dm7.barcodescanner:zbar:1.8.3'
+
 }
