--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services:7.8.+'
-    compile 'me.dm7.barcodescanner:zbar:1.8.3'
-
+    compile 'com.squareup.moshi:moshi:1.0.0'
 }
