--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.jakewharton.timber:timber:4.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.moshi:moshi:1.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.google.android.gms:play-services:7.8.+'
-    compile 'com.squareup.moshi:moshi:1.0.0'
+
 }
